ETSL-943 and 944 Careers Header and Footer alignment fixes

--- a/ui.frontend/src/main/webpack/global/styles/components/header/mega-navigation.scss
+++ b/ui.frontend/src/main/webpack/global/styles/components/header/mega-navigation.scss
@@ -2186,8 +2186,9 @@ div.cover {
 
           img {
             height: auto;
-            margin-left: -15px;
-            margin-top: -11px;
+            margin-left: toRem(30);
+            margin-right: 0;
+            margin-top: toRem(-8);
             width: 86px;
 
             @media only screen and (device-width: 375px) and (device-height: 812px) and (device-pixel-ratio: 3) {
@@ -2198,13 +2199,24 @@ div.cover {
               margin-left: 1.7rem;
             }
 
-            @include respond-to-max($phone) {
-              margin-left: toRem(27);
+            @include respond-to-min($tablet) {
+              margin-left: toRem(60);
             }
 
             @include respond-to-min($desktop) {
+              margin-left: toRem(-15);
               transition: all 0.25s ease-in-out;
               width: 140px;
+
+              @include rtlBlock() {
+                margin-right: toRem(-15);
+              }
+            }
+
+            @include rtlBlock() {
+              @include respond-to-max($phone) {
+                margin-right: toRem(-35);
+              }
             }
           }
 
@@ -2397,9 +2409,28 @@ div.cover {
     display: flexbox;
     display: flex;
     -ms-flex-align: center;
+
+    @include rtlBlock() {
+      @include respond-to-max($tablet) {
+        flex-direction: row-reverse;
+      }
+    }
+  }
+
+  .panel-group {
+    .panel-heading {
+      padding: 0 toRem(16);
+    }
   }
 
   .hamburger {
+    float: left;
+    margin-left: toRem(16) !important;
+
+    @include respond-to-min($tablet) {
+      margin-left: toRem(8) !important;
+    }
+    
     .line {
       background-color: #2b2e2c;
       display: block;
